# agenticAI

./: pyproject.toml  requirements.txt
updatedlangchain/: 1 langchain.ipynb  3 Tools.ipynb  4 messages.ipynb  5 structured output.ipynb  6 middleware.ipynb  langchain-2.ipynb  llm_sample_calling.ipynb
