[project]
name = "agenticai"
version = "0.1.0"
description = "Agentic AI Project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-core>=1.3.5",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
    "notebook>=7.3.1",
    "streamlit>=1.0.0",
]
